--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,7 @@
   text-align: center;
 }
 .main {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,4 +20,17 @@
 input {
   width: 15rem;
   padding: 0.25rem;
+}
+footer {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  margin-top: 4rem;
+  text-align: center;
+  padding: 20px;
+  border-top: 1px solid #2c2c2c;
+}
+footer p {
+  margin: 0;
+  font-size: 12px;
 }
