--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,7 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 4px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -46,12 +46,12 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: 0.7s;
   margin: 0rem 0.75rem;
 }
 button:hover {
-  border-color: #646cff;
-  background-color: #1e293b;
+  border-color: #09090b;
+  background-color: #646cff;
 }
 button:focus,
 button:focus-visible {
